# hopp

./: .gitattributes  .gitignore  .golangcli.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  JASON.MD  README.md  STRIPE_SETUP.md  TODO-Rooms.txt  TRAY_THEME_POC.md  cliff.toml  cloudflared.json  diff.txt  package.json  server.ts  temp.MD  test.txt
core/: AGENTS.md  Cargo.toml  README.md  Taskfile.yml  analyze_vmmap.sh  first.txt  first_1.txt  leaked_iosurfaces.sh  second.txt  third.txt
core/.cargo/: config.toml
core/dev/: Cargo.toml  config.toml
core/dev/src/: main.rs
core/prompts/: clear_warnings.md
core/resources/: .fantasticonrc.cjs
core/resources/icons-font-ttf/: icons.css  icons.html
core/resources/models/: NOTICE.md
core/sentry_utils/: Cargo.toml
core/sentry_utils/src/: lib.rs
core/socket_lib/: Cargo.toml
core/socket_lib/src/: lib.rs
core/src/: camera_window.rs  lib.rs  main.rs  overlay_window.rs  room_service.rs  screensharing_window.rs  snapshot_sender.rs  window_manager.rs
core/src/audio/: capturer.rs  denoiser.rs  device_monitor.rs  metrics.rs  mixer.rs  player.rs  processor.rs  rodio_capturer.rs  rodio_mixer.rs  rodio_player.rs  stream.rs
core/src/audio/device_monitor/: macos.rs  mod.rs  windows.rs
core/src/camera/: capturer.rs  stream.rs  stream_macos.rs  stream_nokhwa.rs  test_macos.rs
core/src/capture/: capturer.rs  linux.rs  macos.rs  macos_stream.rs  stream.rs  windows.rs
core/src/components/: dropdown.rs  fonts.rs  mod.rs  segmented_control.rs  split_button.rs  toast.rs
core/src/graphics/: click_animation.rs  cursor.rs  direct_composition.rs  draw.rs  graphics_context.rs  graphics_window_context.rs  iced_canvas.rs  iced_cursor.rs  iced_marker.rs  iced_renderer.rs  marker.rs  overlay_context.rs  participant.rs  point.rs  shader.wgsl  yuv_buffer.rs  yuv_renderer.rs
core/src/input/: clipboard.rs  keyboard.rs  keyboard_macos.rs  keyboard_windows.rs  mouse.rs  mouse_linux.rs  mouse_macos.rs  mouse_windows.rs
core/src/livekit/: audio.rs  participant.rs  stats.rs  video.rs
core/src/room_service/: livekit_client.rs  room_service.rs
core/src/shaders/: yuv_shader.wgsl
core/src/utils/: clock.rs  geometry.rs  svg_renderer.rs
core/src/window/: aspect_ratio.rs  camera_window.rs  drawing_helpers.rs  drawing_window.rs  gpu_context.rs  native_popover.rs  screensharing_window.rs  stats_window.rs  vibrancy.rs
core/src/windows/: colors.rs  mod.rs  shadows.rs
core/tests/: Cargo.toml  README.md
core/tests/.cargo/: config.toml
core/tests/src/: audio_capture.rs  camera.rs  events.rs  hang_repro.rs  local_drawing.rs  main.rs  remote_clipboard.rs  remote_cursor.rs  remote_drawing.rs  remote_keyboard.rs  screenshare_client.rs  screensharing.rs
(+257 files in other folders)
